# LimeTrace

./: Cargo.toml  README.en.md  README.md  launch.json  tasks.json
.github/workflows/: build-windows.yml
crates/limetrace/: Cargo.toml  build.rs
crates/limetrace-backend/: Cargo.toml  build.rs
crates/limetrace-backend/src/: config.rs  db.rs  main.rs  monitor.rs  recorder.rs
crates/limetrace/src/: main.rs
installer/: LimeTrace.iss
scripts/: build-installer.ps1  dev-open.ps1  package-windows.ps1
