[package]
name = "limetrace-backend"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "limetrace-backend"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
ctrlc = "3.4"
rusqlite = { version = "0.31", features = ["bundled"] }
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(windows)'.build-dependencies]
ico = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
winres = "0.1"
