[package]
name = "limetrace"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "limetrace"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
csv = "1.3"
eframe = "0.30"
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Storage_FileSystem",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(windows)'.build-dependencies]
ico = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
winres = "0.1"
